# vuci

./: README.md  README_ZH.md
vuci-rpc-base/: Makefile
vuci-rpc-base/src/: CMakeLists.txt  vuci.c
vuci-ui-base/: Makefile
vuci-ui-base/share/rpcd/acl.d/: vuci.json
vuci-ui-base/src/: Makefile  README.md  package.json  vuci.html
vuci-ui-base/src/config/: index.js
vuci-ui-base/src/src/: main.js
vuci-ui-base/src/src/components/: HelloWorld.vue  Home.vue  Login.vue
vuci-ui-base/src/src/pages/: 404.vue  Home.vue  Login.vue  home.vue  login.vue  status-overview.vue  status-routes.vue
vuci-ui-base/src/src/plugins/: jsonrpc.js  login.js  menu.js  rpc.js  session.js  system.js  ubus.js
vuci-ui-base/src/src/plugins/ubus/: api.js  index.js  rpc.js
vuci-ui-base/src/src/router/: index.js
vuci-ui-base/src/src/store/: index.js
vuci-ui-base/src/src/views/: home.vue  login.vue  status.overview.vue
